--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,81 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
-    tools:context=".register">
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:layout_gravity="center"-->
+<!--    android:orientation="vertical"-->
+<!--    android:background="#FFFFFF"-->
+<!--    tools:context=".register">-->
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="GoFitpal"
-        android:textStyle="bold"
-        android:textColor="@color/teal_700"
-        android:textSize="30sp" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="160dp"
-        android:scaleType="fitXY"
-        android:layout_margin="40dp"
-        android:src="@drawable/logo2"
-        />
-
-
-    <EditText
-        android:hint="Username"
-        android:layout_margin="10dp"
-        android:id="@+id/etUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:hint="Contact Number"
-        android:layout_margin="10dp"
-        android:id="@+id/etContact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:hint="Email"
-        android:layout_margin="10dp"
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:hint="Password"
-        android:layout_margin="10dp"
-        android:id="@+id/etPassword"
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:hint="Confirm password"
-        android:layout_margin="10dp"
-        android:id="@+id/etConfirmPassword"
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="GoFitpal"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="@color/teal_700"-->
+<!--        android:textSize="30sp" />-->
+<!--    <ImageView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="160dp"-->
+<!--        android:scaleType="fitXY"-->
+<!--        android:layout_margin="40dp"-->
+<!--        android:src="@drawable/logo2"-->
+<!--        />-->
 
 
+<!--    <EditText-->
+<!--        android:hint="Username"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/etUsername"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
 
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:textColor="@color/white"
-        android:background="@color/teal_700"
-        android:layout_margin="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="70dp"
-        />
+<!--    <EditText-->
+<!--        android:hint="Contact Number"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/etContact"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
 
-</LinearLayout>
+<!--    <EditText-->
+<!--        android:hint="Email"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/etEmail"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
+
+<!--    <EditText-->
+<!--        android:hint="Password"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/etPassword"-->
+<!--        android:inputType="textPassword"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
+
+<!--    <EditText-->
+<!--        android:hint="Confirm password"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/etConfirmPassword"-->
+<!--        android:inputType="textPassword"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
+
+
+
+<!--    <Button-->
+<!--        android:id="@+id/btnRegister"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Register"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:background="@color/teal_700"-->
+<!--        android:layout_margin="30dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:layout_marginBottom="70dp"-->
+<!--        />-->
+
+<!--</LinearLayout>-->
