--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="Welcome to new healthy lifestyle !!"
+        android:text="Welcome to new healthy lifestyle !!!"
         android:textColor="@color/white"
         android:textSize="20sp" />
 
