--- a/app/src/main/res/drawable-anydpi/ic_action_workoutplan.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_workoutplan.xml
@@ -7,20 +7,5 @@
     android:alpha="0.6">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M20,18l0,-3l-2,0l0,3l-3,0l0,2l3,0l0,3l2,0l0,-3l3,0l0,-2z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M18,4h2v9h-2z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M4,4h2v16h-2z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M11,4h2v4h-2z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M11,10h2v4h-2z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M11,16h2v4h-2z"/>
+      android:pathData="M13.49,5.48c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM9.89,19.38l1,-4.4 2.1,2v6h2v-7.5l-2.1,-2 0.6,-3c1.3,1.5 3.3,2.5 5.5,2.5v-2c-1.9,0 -3.5,-1 -4.3,-2.4l-1,-1.6c-0.4,-0.6 -1,-1 -1.7,-1 -0.3,0 -0.5,0.1 -0.8,0.1l-5.2,2.2v4.7h2v-3.4l1.8,-0.7 -1.6,8.1 -4.9,-1 -0.4,2 7,1.4z"/>
 </vector>
