--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1A8289"
+    android:id="@+id/drawerLayout"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <include
