--- a/app/src/main/res/layout/fragment_calorie_counter.xml
+++ b/app/src/main/res/layout/fragment_calorie_counter.xml
@@ -1,17 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".CalorieCounterFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="calorie count"
-        android:gravity="center"
-        android:textSize="50sp"
-        />
+        android:layout_height="wrap_content"
+        android:text="Age"
+        android:layout_marginLeft="30dp"
+        android:textSize="30sp"
+        android:layout_marginTop="100px"
+        android:textStyle="bold"/>
 
-</FrameLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Height"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="220px"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Weight"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="340px"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="460px">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gender"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="30dp"/>
+
+        <RadioButton
+            android:id="@+id/male"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="Male"
+            android:textSize="20dp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/male"
+            android:text="Female"
+            android:layout_marginLeft="5dp"
+            android:textSize="20dp" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/male"
+            android:text="Others"
+            android:layout_marginLeft="5dp"
+            android:textSize="20dp" />
+
+
+    </RadioGroup>
+
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Activity"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="580px"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        text
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="900px"
+        android:text="Calculate"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:background="@color/teal_700"
+        android:textColor="@color/white"
+        android:padding="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"/>
+
+
+
+</RelativeLayout>
